重构：移除自定义constant.utf 编码，并替换成JDK 默认常量